--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-icons/core": "^30.2.0",
+    "@ng-icons/heroicons": "^30.2.0",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
     "chart.js": "^4.4.7",
+    "lucide-angular": "^0.469.0",
     "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
