--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@ngrx/effects": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
+    "@types/marked": "^6.0.0",
     "chart.js": "^4.4.7",
     "lucide-angular": "^0.469.0",
+    "marked": "^15.0.6",
     "ng2-charts": "^7.0.0",
+    "ngx-markdown": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
